# baseball-scorecard-server

./: .gitignore  Cargo.toml  README.md  Rocket.toml.tpl
.github/workflows/: rust.yml
src/: main.rs
src/db/: game.rs  mod.rs
src/models/: game.rs  mod.rs  player.rs  team.rs
src/routes/: game.rs  mod.rs
