[package]
name = "baseball-scorecard-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version="0.4.31", features= ["clock"]}
chrono = {version="0.4.31", features= ["clock"]}
rocket = { version="0.5.0-rc.4", features = ["json"] }
rocket_db_pools = { version = "0.1.0-rc.4", features = ["mongodb"] }
serde = { version = "1.0", features = ["derive"] }
bson = { version = "2.7.0", features = ["chrono-0_4"] }